[gd_scene load_steps=6 format=3 uid="uid://cl018wpiprxuc"]

[ext_resource type="Script" path="res://Scripts/Lobby/DeckCardUI.gd" id="1_ok32n"]
[ext_resource type="Texture2D" uid="uid://05g30jsudqqg" path="res://icon.svg" id="2_5ui1d"]
[ext_resource type="Texture2D" uid="uid://uspsjh53dvt3" path="res://Resources/IconFrame.png" id="2_ew4cb"]
[ext_resource type="Texture2D" uid="uid://c6agkd7byc7ip" path="res://Resources/EffectFrame.png" id="4_qqjd6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kv4aa"]
size = Vector2(103.333, 103.333)

[node name="Area2D" type="Area2D" node_paths=PackedStringArray("icon", "text") groups=["Card UI"]]
z_as_relative = false
scale = Vector2(0.6, 0.6)
script = ExtResource("1_ok32n")
icon = NodePath("Sprite")
text = NodePath("Text Label")

[node name="Text Label" type="Sprite2D" parent="." groups=["Text"]]
visible = false
z_index = -2
z_as_relative = false
position = Vector2(-115, 0)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_qqjd6")

[node name="Effect" type="Label" parent="Text Label"]
z_index = -1
z_as_relative = false
anchors_preset = -1
anchor_left = 0.468
anchor_top = 0.5
anchor_right = 0.468
anchor_bottom = 0.5
offset_left = -934.788
offset_top = -456.0
offset_right = -765.788
offset_bottom = -376.0
scale = Vector2(5, 5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Name :
Effect ..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Frame" type="Sprite2D" parent="." groups=["Frame"]]
z_index = -2
z_as_relative = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_ew4cb")

[node name="Sprite" type="Sprite2D" parent="." groups=["Icon"]]
z_index = -3
z_as_relative = false
scale = Vector2(0.075, 0.075)
texture = ExtResource("2_5ui1d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -10
z_as_relative = false
position = Vector2(3.97364e-07, 3.97364e-07)
scale = Vector2(0.75, 0.75)
shape = SubResource("RectangleShape2D_kv4aa")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
